--- a/test/fixtures/splits.yml
+++ b/test/fixtures/splits.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  account: one
+  account: a7
   entry: one
   memo: MyString
   action: MyString
@@ -11,8 +11,18 @@ one:
   lock_version: 1
 
 two:
-  account: two
+  account: a8
   entry: two
+  memo: MyString
+  action: MyString
+  reconcile_state: MyString
+  reconcile_date: 2020-10-28
+  amount: -1
+  lock_version: 1
+
+three:
+  account: a7
+  entry: one
   memo: MyString
   action: MyString
   reconcile_state: MyString
