--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,62 +1,133 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  uuid: MyString
-  book: one
-  name: MyString
-  account_type: MyString
-  code: MyString
-  description: MyString
-  placeholder: false
-  contra: false
-  parent_id: 1
+a1:
+  uuid: 7bb50f3e-038b-48f2-9052-081023ecc13b
+  book: b1
+  parent_id: null
+  name: Root Account
+  account_type: ROOT
+  placeholder: true
+  level: 0
+a2:
+  uuid: 483865ef-a5be-47d4-9925-e18dbdc804fd
+  book: b1
+  parent: a1
+  name: Assets
+  account_type: ASSET
+  placeholder: true
   level: 1
-
-one1:
-  uuid: MyString1
-  book: one
-  name: MyString
-  account_type: MyString
-  code: MyString
-  description: MyString
-  placeholder: false
-  contra: false
-  parent_id: one
+a3:
+  id: 3
+  uuid: 395990a7-0fe4-49fb-8921-586d28792a8a
+  book: b1
+  parent: a1
+  name: Liabilities
+  account_type: LIABILITY
+  placeholder: true
   level: 1
-
-one2:
-  uuid: MyString2
-  book: one
-  name: MyString
-  account_type: MyString
-  code: MyString
-  description: MyString
-  placeholder: false
-  contra: false
-  parent_id: one1
+a4:
+  id: 4
+  uuid: 20161b79-c6d3-43f4-9ce2-af0f69233185
+  book: b1
+  parent: a1
+  name: Equity
+  account_type: EQUITY
+  placeholder: true
   level: 1
-
-one3:
-  uuid: MyString3
-  book: one
-  name: MyString
-  account_type: MyString
-  code: MyString
-  description: MyString
-  placeholder: false
-  contra: false
-  parent_id: 1
+a5:
+  id: 5
+  uuid: ff5b3fab-4e1c-42c0-9082-57240e98860a
+  book: b1
+  parent: a1
+  name: Income
+  account_type: INCOME
+  placeholder: true
   level: 1
-
-
-two:
-  uuid: MyString
-  book: two
-  name: MyString
-  account_type: MyString
-  code: MyString
-  description: MyString
-  placeholder: false
-  contra: false
-  parent_id: 1
+a6:
+  id: 6
+  uuid: 3f162bb2-bed5-47eb-8f58-16b87d163912
+  book: b1
+  parent: a1
+  name: Expenses
+  account_type: EXPENSE
+  placeholder: true
   level: 1
+a7:
+  id: 7
+  uuid: c8c3096e-d58d-477b-a896-56208e3c2601
+  book: b1
+  parent: a2
+  name: Checking
+  account_type: BANK
+  placeholder: false
+  level: 2
+a8:
+  id: 8
+  uuid: a1958d82-89a0-42bf-b593-1e0a353b7401
+  book: b1
+  parent: a1
+  name: Savings
+  account_type: BANK
+  placeholder: false
+  level: 2
+
+# one:
+#   uuid: root
+#   book: one
+#   name: MyStringRoot
+#   account_type: ROOT
+#   code: MyString
+#   description: MyString
+#   placeholder: false
+#   contra: false
+#   parent_id: nil
+#   level: 0
+
+# one1:
+#   uuid: MyString1
+#   book: one
+#   name: MyString1
+#   account_type: ASSET
+#   code: MyString
+#   description: MyString
+#   placeholder: false
+#   contra: false
+#   parent_id: one
+#   level: 1
+
+# one2:
+#   uuid: MyString2
+#   book: one
+#   name: MyString2
+#   account_type: ASSET
+#   code: MyString
+#   description: MyString
+#   placeholder: false
+#   contra: false
+#   parent_id: one1
+#   level: 2
+
+# one3:
+#   uuid: MyString3
+#   book: one
+#   name: MyString3
+#   account_type: ASSET
+#   code: MyString
+#   description: MyString
+#   placeholder: false
+#   contra: false
+#   parent_id: 1
+#   level: 3
+
+
+# two:
+#   uuid: MyString4
+#   book: two
+#   name: MyString4
+#   account_type: EXPENSE
+#   code: MyString
+#   description: MyString
+#   placeholder: false
+#   contra: false
+#   parent_id: 1
+#   level: 1
