--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  book: one
+  book: b1
   numb: MyString
   post_date: 2020-10-28
   description: MyString
@@ -9,7 +9,7 @@ one:
   lock_version: 1
 
 two:
-  book: two
+  book: b1
   numb: MyString
   post_date: 2020-10-28
   description: MyString
