--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,16 +1,16 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: MyStringOne
-  username: MyStringOne
+  email: MyStringOne@example.com
+  username: MyUserOne
   full_name: MyStringOne
   roles: []
   password_digest: <%= BCrypt::Password.create('secret') %>
   default_book: 1
 
 two:
-  email: MyStringTwo
-  username: MyStringTwo
+  email: MyStringTwo@example.com
+  username: MyUserTwo
   full_name: MyStringTwo
   roles: []
   password_digest: <%= BCrypt::Password.create('secret') %>
