--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -83,6 +83,34 @@ test:
   # Compile test packs to a separate directory
   public_output_path: packs-test
 
+  staging:
+    <<: *default
+    compile: true
+
+    # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
+    check_yarn_integrity: false
+
+    # Reference: https://webpack.js.org/configuration/dev-server/
+    dev_server:
+      https: false
+      host: localhost
+      port: 3035
+      public: localhost:3035
+      hmr: false
+      # Inline should be set to true if using HMR
+      inline: true
+      overlay: true
+      compress: true
+      disable_host_check: true
+      use_local_ip: false
+      quiet: false
+      pretty: false
+      headers:
+        'Access-Control-Allow-Origin': '*'
+      watch_options:
+        ignored: '**/node_modules/**'
+
+
 production:
   <<: *default
 
