reset rbooks_development

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: rbooks_staging
+  database: rbooks_development
 
 production:
   adapter: postgresql
