Drhuffman12 update to ruby 3 and dockerize (#1)
* Add github workflow CI action.

* Dockerize

* Adjust Gemfile*

* Adjust CI to use "rails test" instead of "rspec"

* Adjust local "development:" environment to use dockerized postgres.

* Disable Rubocop in CI (for now).

* Adjust local and CI for dockerized testing.

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,16 +4,35 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+# default: &default
+#   adapter: sqlite3
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   timeout: 5000
 
-development:
+#development:
+#  adapter: postgresql
+#  encoding: unicode
+#  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#  database: rbooks_development
+#
+
+default: &default
   adapter: postgresql
   encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: db
+  username: postgres
+  password: password
+
+development:
+  <<: *default
   database: rbooks_development
+
+test:
+  <<: *default
+  database: rbooks_test
 
 production:
   adapter: postgresql
@@ -27,10 +46,10 @@ staging:
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: rbooks_staging
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
+#   <<: *default
+#   database: db/test.sqlite3
 
