--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "webpack-dev-server": "^3.11.2"
   }
 }
