--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "stimulus-flatpickr": "^1.3.3",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
-  },
-  "version": "0.1.0",
-  "devDependencies": {
+    "webpack-cli": "^3.3.12",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+  },
+  "version": "0.1.0",
+  "devDependencies": {
     "webpack-dev-server": "^3.11.2"
   }
 }
