--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ staging:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: rbooks_staging
+  database: rbooks_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
